# spark-training-workshop-pyspark

./: .cruft.json  .gitignore  Makefile  README.md  VERSION  poetry.toml  pyproject.toml  sonar-project.properties  spark-training-workshop-pyspark.code-workspace
.github/actions/install-project/: action.yml
.github/actions/load-env/: action.yml
.github/actions/publish-image-ecr/: action.yml
.github/actions/publish-wheel-ca/: action.yml
.github/workflows/: checkers.yml  publication-dev.yml  publication-ppd-prd.yml  sonarcloud.yml  sphinxdocs.yml
confs/base/: params.yml  spark.yml
confs/dev/: catalog.yml  params.yml
confs/preprod/: catalog.yml
depl/: dbx-workflows.yml
docker/: Dockerfile  netrc.in
docs/source/: conf.py  index.rst  markdown.md  restructured.rst
env/: base.env  dev.env  local.env  preprod.env  prod.env
notebooks/: example_job.py
src/spark_training_workshop_pyspark/: config.py  logging.py  session.py
src/spark_training_workshop_pyspark/io/: core.py  exceptions.py
src/spark_training_workshop_pyspark/io/schemas/: aggregated_flights.py  flights.py
src/spark_training_workshop_pyspark/jobs/: example_job.py
src/spark_training_workshop_pyspark/transform/: flights.py
src/spark_training_workshop_pyspark/utils/: path_utils.py
src/tests/: conftest.py  docker_tests_entrypoint.sh
src/tests/confs/tests/: catalog.yml  spark.yml
src/tests/jobs/: test_example_job.py
src/tests/unit/conf/: test_config.py
src/tests/unit/transform/: test_flights.py
