# https://python-poetry.org/docs/pyproject/

# PACKAGE

[tool.poetry]
name = "spark-training-workshop-pyspark"
version = "2023.11.15.dev8"
description = "training"
repository = "https://github.com/dktunited/spark-training-workshop-pyspark"
authors = ["spark-training <spark-training@decathlon.com>"]
packages = [
    { include = "spark_training_workshop_pyspark", from = "src" },
]
license = "Proprietary"
readme = "README.md"

# SCRIPTS

[tool.poetry.scripts]
example_job = 'spark_training_workshop_pyspark.jobs.example_job:main'

# DEPENDENCIES

[tool.poetry.dependencies]
python = "3.11.5"
boto3 = "^1.26.8"
cloudpathlib = { version = "^0.10.0", extras = ["s3"] }
loguru = "^0.6.0"
omegaconf = "^2.2.3"
#pyarrow = "^10.0.0"
s3fs = "<=0.4"
pytest = { version = "^7.1.3", optional = true }


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
coverage = "^6.5.0"
#dbx = "^0.8.18"
hypothesis = "^6.56.4"
ipykernel = "^6.16.1"
isort = "^5.10.1"
mypy = "^0.982"
myst-parser = "^0.18.1"
pandera = "^0.13.4"
pylint = "^2.15.4"
pyspark = "^3.3.0"
pyspark_test = "^0.2.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.2"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
twine = "^4.0.1"

# CONFIGURATIONS

[tool.black]
line-length = 120

[tool.coverage.run]
branch = true
source = [ "." ]

[tool.coverage.report]
omit = [ "tests/*" ]

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
ignore_missing_imports = true
plugins = [ "pandera.mypy" ]

[tool.pylint.'MESSAGES CONTROL']
disable = [ 'duplicate-code', 'too-many-locals' ]
max-line-length = 120

# SYSTEMS

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# SOURCES

# Keep this source commented if you don't need packages from dktunited
# - when you enable this source, poetry will check it for every dependency
# -> this process is slower: https://github.com/python-poetry/poetry/issues/3855

# [[tool.poetry.source]]
# name = "dktunited"
# url = "https://dataplatform-585305677161.d.codeartifact.eu-west-1.amazonaws.com/pypi/dataplatform-store-pypi/simple/"
# default = false
# secondary = true
